tests/semantic/stmt_builder/snapshots/r#mod__semantic__statement_building__return_building__return_in_if_else_if_else.snap
---
source: tests/semantic/statement_building/return_building.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: do_something
    namespace_id: 0
    func_type: Global
    params:
      - label: ~
        name: if_param
        var_id: 0
        value_type:
          Primitive: Bool
        def_val: ~
        range:
          start: 0
          end: 0
      - label: ~
        name: if_else_param
        var_id: 1
        value_type:
          Primitive: Bool
        def_val: ~
        range:
          start: 0
          end: 0
    return_type:
      Primitive: Float
    block:
      body:
        - If:
            main:
              condition:
                kind:
                  Identifier: 0
                value_type:
                  Primitive: Bool
                range:
                  start: 0
                  end: 0
              block:
                body:
                  - Return:
                      value:
                        kind:
                          FloatLiteral: 5
                        value_type:
                          Primitive: Float
                        range:
                          start: 0
                          end: 0
                scope_id: 3
            else_ifs:
              - condition:
                  kind:
                    Identifier: 1
                  value_type:
                    Primitive: Bool
                  range:
                    start: 0
                    end: 0
                block:
                  body:
                    - Return:
                        value:
                          kind:
                            FloatLiteral: 3
                          value_type:
                            Primitive: Float
                          range:
                            start: 0
                            end: 0
                  scope_id: 4
            else_block:
              body:
                - Return:
                    value:
                      kind:
                        FloatLiteral: 1
                      value_type:
                        Primitive: Float
                      range:
                        start: 0
                        end: 0
              scope_id: 5
      scope_id: 2
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - do_something
  : 0
next_function_id: 1
