tests/semantic/stmt_builder/snapshots/r#mod__semantic__statement_building__return_building__return_on_no_return_func.snap
---
source: tests/semantic/statement_building/return_building.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: main
    namespace_id: 0
    func_type: Global
    params: []
    return_type:
      Primitive: Void
    block:
      body:
        - Return:
            value: ~
      scope_id: 2
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - main
  : 0
next_function_id: 1
